--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,11 @@ CppSLHA/.cproject
 .cproject
 
 .DS_Store
+
+Debug/LHC-FASER_light.o
+
+Debug/LHC-FASER_light.d
+
+Debug/LHC-FASER_base_lepton_distribution_stuff.o
+
+Debug/LHC-FASER_base_lepton_distribution_stuff.d
