ignoring extra exe file

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ Debug/LHC-FASER_light.d
 Debug/LHC-FASER_base_lepton_distribution_stuff.o
 
 Debug/LHC-FASER_base_lepton_distribution_stuff.d
+
+LHC-FASER_Light.exe
